<resources>
    <string name="amount_cities">Number of cities added to the database: %d </string>
    <string name="search">Search</string>
    <string name="quiz">Quiz</string>
    <string name="about_app">About app</string>
    <string name="themes">Themes</string>
    <string name="city">City:</string>
    <string name="country">Country:</string>
    <string name="population">Population:</string>
    <string name="capital">Capital:</string>
    <string name="hint_for_search_line">Enter your city or country!</string>
    <string name="skip_question">Skip question</string>
    <string name="capital_question">Which city is the capital of %s?</string>
    <string name="current_score">Current score:</string>
    <string name="best_score">Best score:</string>
    <string name="back_to_menu">Back to menu</string>
    <string name="nice_try">Nice try!</string>
    <string name="easy_lvl">Easy level</string>
    <string name="middle_lvl">Middle level</string>
    <string name="hard_lvl">Hard level</string>
    <string name="choose_lvl">Choose a quiz level!</string>
    <string name="skip">Skip:</string>
    <string name="play_again">Play again</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_alert">Do you want to leave the game?</string>
    <string name="alert_title">Leave the game</string>
    <string name="waiting_text">Wait a little bit…</string>
    <string name="app_summary_text">This application is a quiz of cities. There is a section to improve your knowledges about cities.</string>
    <string name="data_sources">Data sources</string>
    <string name="cities_info_file">Cities info - </string>
    <string name="cities_flags">Cities flags - </string>
    <string name="frameworks">Frameworks</string>
    <string name="frameworks_list">Database - Room\nMultithreading - Kotlin coroutines\nImage load - Coil\nMap - Google Maps API\nNavigation - Navigation component</string>
    <string name="app_summary">Summary</string>
    <string name="default_theme_button">Default</string>
    <string name="light_theme_button">Light</string>
    <string name="dark_theme_button">Dark</string>
    <string name="empty_query">Oops, invalid request entered.\nUpdate your search query!</string>
    <string name="themes_header">Choose theme!</string>
    <string name="current_theme">Current theme: %s</string>
</resources>