<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?pageBackground"
    tools:context=".ui.fragment.ResultFragment">

    <TextView
        android:id="@+id/nice_try"
        style="@style/HeadTextViewStyle"
        android:text="@string/nice_try"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        style="@style/ViewStyleResultFragment"
        app:layout_constraintBottom_toTopOf="@+id/back_to_menu_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nice_try" />

    <TextView
        android:id="@+id/current_score"
        style="@style/TextStyleItem"
        android:text="@string/current_score"
        android:textSize="@dimen/text_size_25"
        app:layout_constraintBottom_toTopOf="@+id/best_score"
        app:layout_constraintEnd_toStartOf="@+id/current_score_amount"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/current_score_amount"
        style="@style/TextStyleItem"
        android:textSize="@dimen/text_size_25"
        app:layout_constraintBottom_toTopOf="@+id/best_score_amount"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toEndOf="@+id/best_score"
        app:layout_constraintTop_toBottomOf="@+id/view"
        tools:text="1200" />

    <TextView
        android:id="@+id/best_score"
        style="@style/TextStyleItem"
        android:text="@string/best_score"
        android:textSize="@dimen/text_size_25"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toStartOf="@id/best_score_amount"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/current_score" />

    <TextView
        android:id="@+id/best_score_amount"
        style="@style/TextStyleItem"
        android:textSize="@dimen/text_size_25"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toEndOf="@+id/best_score"
        app:layout_constraintTop_toBottomOf="@+id/current_score_amount"
        tools:text="1256" />

    <Button
        android:id="@+id/play_again_button"
        style="@style/ButtonStyle"
        android:layout_marginBottom="@dimen/layout_margin_10"
        android:text="@string/play_again"
        app:layout_constraintBottom_toTopOf="@+id/back_to_menu_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/back_to_menu_button"
        style="@style/ButtonStyle"
        android:text="@string/back_to_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />
</androidx.constraintlayout.widget.ConstraintLayout>