<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/layout_margin_10"
    app:cardBackgroundColor="?colorPrimary"
    app:cardCornerRadius="@dimen/corner_radius"
    app:cardMaxElevation="@dimen/card_max_elevation">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_margin_10"
        android:layout_marginTop="@dimen/layout_margin_10"
        android:layout_marginBottom="@dimen/layout_margin_10">

        <TextView
            android:id="@+id/country"
            style="@style/TextStyleItem"
            android:text="@string/country"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/country_name"
            style="@style/TextStyleItem"
            app:layout_constraintStart_toEndOf="@+id/country"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Belarus" />

        <TextView
            android:id="@+id/city"
            style="@style/TextStyleItem"
            android:text="@string/city"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/country" />

        <TextView
            android:id="@+id/city_name"
            style="@style/TextStyleItem"
            app:layout_constraintStart_toEndOf="@+id/city"
            app:layout_constraintTop_toBottomOf="@+id/country_name"
            tools:text="Minsk" />

        <TextView
            android:id="@+id/population"
            style="@style/TextStyleItem"
            android:text="@string/population"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/city" />

        <TextView
            android:id="@+id/amount_population"
            style="@style/TextStyleItem"
            app:layout_constraintStart_toEndOf="@+id/population"
            app:layout_constraintTop_toBottomOf="@+id/city_name"
            tools:text="12312312" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>